[package]
name = "rust-cel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-api-proto = { version = "1", features = ["google-api-expr-v1beta1", "google-api-expr-v1alpha1"] }
anyhow = "1.0.60"

[dev-dependencies]
google-api-proto = { version = "1", features = ["google-api-expr-v1beta1", "google-api-expr-v1alpha1", "google-api-expr-conformance-v1alpha1"] }